@@ -8173,7 +8173,6 @@ PlugCoroutineChains(
     corPtr->base.framePtr->callerVarPtr = corPtr->caller.varFramePtr;
 
     corPtr->base.cmdFramePtr->nextPtr = corPtr->caller.cmdFramePtr;
-    corPtr->levelOffset = iPtr->cmdFramePtr->level;
 }
 
 static int
@@ -8190,12 +8189,6 @@ NRCoroutineFirstCallback(
 	    tmpPtr = tmpPtr->nextPtr;
 	}
 
-	/*
-	 * Set the base cmdFrame level to zero, it will be computed using the
-	 * offset. 
-	 */
-	
-	tmpPtr->level = 0;
 	corPtr->base.cmdFramePtr = tmpPtr;
     }
 
@@ -8395,8 +8388,6 @@ TclNRCoroutineObjCmd(
      * On first run just set a 0 level-offset, the natural numbering is
      * correct. The offset will be fixed for later runs.
      */
-    
-    corPtr->levelOffset = 0;
     
     Tcl_DStringInit(&ds);
     if (nsPtr != iPtr->globalNsPtr) {
