@@ -1347,7 +1347,6 @@ typedef struct CoroutineData {
     CorContext caller;
     CorContext running;
     CorContext base;
-    int levelOffset;
     int *stackLevel;
 } CoroutineData;
 
